# solo-zj-00033-20260427-0to1

./: .gitignore  docker-compose.yml  test_data.sh
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_initial_schema.sql
backend/src/: config.rs  db.rs  main.rs  models.rs
backend/src/handlers/: auth.rs  comments.rs  embed.rs  likes.rs  mod.rs  search.rs  snippets.rs  users.rs  versions.rs
backend/src/middleware/: auth.rs  rate_limit.rs
backend/src/utils/: jwt.rs
frontend/: Dockerfile  package.json  svelte.config.js  tsconfig.json  vite.config.js
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: CodeEditor.svelte  MultiFileEditor.svelte  Navbar.svelte  SnippetCard.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/hot/: +page.svelte
frontend/src/routes/latest/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/new/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/search/: +page.svelte
frontend/src/routes/snippet/[id]/: +page.svelte
frontend/src/routes/snippet/[id]/diff/: +page.svelte
frontend/src/routes/snippet/[id]/edit/: +page.svelte  +page.ts
frontend/src/routes/user/[id]/: +page.svelte
frontend/src/types/: diff.d.ts
