[package]
name = "code_share_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6.4"
actix-web-httpauth = "0.8.1"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-rustls"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
env_logger = "0.10"
dotenv = "0.15"
futures = "0.3"
tower-http = { version = "0.5", features = ["limit", "cors"] }
regex = "1.10"
